tests/negative/Variable.tst

int b = 1;
int a = b + 3;
int c = true;

int func()
{
	auto q;
	int u = 5;
	bool u;

	int d = h + u;

	return 0;
}

========

Variable.syp: global variables only support constant value initializer
Variable.syp: global variable initialization requires exact type matching
Variable.syp: auto variable type requires initialization
Variable.syp: variable u already defined
Variable.syp: variable h not declared
found 5 errors
